syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.varda.grpc";
option java_outer_classname = "Project_nameProto";

package com.varda;


service KVProtoService {
    rpc get (ProtoGetRequest) returns (ProtoGetResponse){}
    rpc delete (ProtoDeleteRequest) returns (ProtoDeleteResponse){}
    rpc put (ProtoPutRequest) returns (ProtoPutResponse){}
}

message ProtoGetRequest {
    string key = 1;
    
}

message ProtoGetResponse {
    string key = 1;
    string value = 2;
}

message ProtoDeleteRequest {
    string key = 1;
    
}

message ProtoDeleteResponse {
    string key = 1;
    bool flag = 2;
}

message ProtoPutRequest {
    string key = 1;
    string value = 2;
}

message ProtoPutResponse {
    string key = 1;
    bool flag = 2;
}